# eventyay-socialmedia

./: .gitignore  .install-hooks.sh  .update-locales.sh  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
eventyay_socialmedia/: __init__.py  apps.py
eventyay_socialmedia/locale/de/LC_MESSAGES/: django.po
socialmedia/: __init__.py  admin.py  apps.py  export.py  forms.py  models.py  signals.py  urls.py  views.py
socialmedia/migrations/: 0001_initial.py
socialmedia/templates/socialmedia/: dashboard_component.html  global_index.html  index.html  settings.html
tests/: test_main.py  test_models.py  test_views.py
